# datadrop

./: .gitignore  .pylintrc  Dockerfile  LICENSE  README.md  build-docker.sh  manage.py  pyproject.toml  requirements.txt  run-docker.sh  settings-prod.py
.github/workflows/: ci.yml
app/: admin.py  apps.py  forms.py  models.py  tests.py  views.py
app/locale/fr/LC_MESSAGES/: django.po
app/management/commands/: checktranslations.py
app/migrations/: 0001_initial.py  0002_auto_20200508_1750.py  0003_auto_20200524_2151.py
app/templates/app/: base.html  download_list.html  index.html  link-disabled.html  link_confirm_delete.html  link_form.html  link_list.html  mail_notification.html  thanks.html  upload_confirm_delete.html  upload_form.html  upload_list.html
app/templates/registration/: login.html
app/templatetags/: app_extras.py
datadrop/: asgi.py  settings.py  urls.py  wsgi.py
