[tool.poetry]
name = "DataDrop"
version = "1.0.0"
description = "Drop you data"
authors = ["benjamin <benjamin@invenis.co>"]


[tool.poetry.dependencies]
python = "^3.8"
gunicorn = "*"
django = "^3"
django-bootstrap4 = "*"


[tool.poetry.dev-dependencies]
pytest = "^5.2"
ipython = "^7.12.0"
pylint = "^2.4.4"
bandit = "^1.6.2"
pylint-django = "^2.0.13"
sentry-sdk = "^0.14.2"
coverage = "^5.0.3"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

